- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    4.8.5
- 
    None
- 
    Kubuntu Precise 12.04 (qt4: 4:4.8.1-0ubuntu4.6)
 LibreOffice master build (4.3 alpha)
- 
        a2f78ea0a147301222cb5346fad7e09121d87d59
This bug is related to QTBUG-14461 and QTBUG-34614.
After some more investigation I found QEventLoop::ExcludeSocketNotifiers not implemented for the Glib event loop.
Actually all pointers are in the backtrace of QTBUG-34614 (bt-repaint-error.txt); I just didn't realize the bug.
The fix is quite simple - check the provided QEventLoop::ProcessEventsFlags for QEventLoop::ExcludeSocketNotifiers and block the socket notifications accordingly.
This is implemented in the attached patch.
- duplicates
- 
                    QTBUG-34614 Repaint errors when run with X11 clipboard code branch "useEventLoopForWaiting=true". -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-37380 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 94646,4 | Honor ExcludeSocketNotifiers in glib event loop | 5.4 | qt/qtbase | Status: ABANDONED | +2 | 0 |