KDE4: add Qt4 glib ExcludeSocket runtime check

Add a runtime check and configure warning to disable KDE4 native
file pickers, if the Qt4 glib dispatcher doesn't honor the
QEventLoop::ExcludeSocketNotifiers flag.

This way polling the QClipboard using the event loop won't
crash LibreOffice with recursive paint events,

See https://bugreports.qt-project.org/browse/QTBUG-37380

(cherry picked from commit cc8d566d74a2e0b969b92d9cf22cc95a3bf31a98)

Change-Id: I48795deef82eaf6f95a4e518baea66c52f0b7400
Reviewed-on: https://gerrit.libreoffice.org/8708
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>